// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReviewTab create CTA visibility > matches baseline snapshot for active review state 1`] = `
<div
  class="mb-3 flex flex-wrap items-center gap-2 rounded border border-border/70 bg-surface2/60 p-2"
  data-testid="flashcards-review-topbar"
>
  <div
    class="ant-select ant-select-outlined min-w-64 max-w-full flex-1 css-var-root ant-select-css-var css-dev-only-do-not-override-3uaqrl ant-select-single ant-select-allow-clear ant-select-show-arrow"
    data-testid="flashcards-review-deck-select"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-content-value"
        style="visibility: visible;"
        title="11"
      >
        11
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="search"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-select-clear"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-dev-only-do-not-override-3uaqrl css-var-root"
    data-testid="flashcards-review-mode-toggle"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Due only"
        >
          Due only
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Cram"
        >
          Cram
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-dev-only-do-not-override-3uaqrl css-var-root"
    data-testid="flashcards-review-prompt-side-toggle"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Front first"
        >
          Front first
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Back first"
        >
          Back first
        </div>
      </label>
    </div>
  </div>
</div>
`;

exports[`ReviewTab create CTA visibility > matches baseline snapshot for active review state 2`] = `
<div
  class="ant-card ant-card-bordered css-dev-only-do-not-override-3uaqrl css-var-root"
  data-testid="flashcards-review-active-card"
>
  <div
    class="ant-card-body"
  >
    <div
      class="flex flex-col gap-3"
    >
      <div>
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <span
            class="ant-tag ant-tag-filled css-dev-only-do-not-override-3uaqrl css-var-root"
          >
            Standard
          </span>
          <span
            class="ant-tag ant-tag-filled ant-tag-green css-dev-only-do-not-override-3uaqrl css-var-root"
            data-testid="flashcards-review-queue-state"
          >
            Review
          </span>
          <button
            aria-label="Edit card (E)"
            class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined ant-btn-sm"
            data-testid="flashcards-review-edit-card"
            type="button"
          >
            <span>
              Edit
            </span>
          </button>
        </div>
      </div>
      <div>
        <h5
          class="ant-typography !mb-2 css-dev-only-do-not-override-3uaqrl css-var-root"
        >
          Front
        </h5>
        <div
          class="rounded border border-border bg-surface p-3 text-sm text-text"
        >
          <div
            class="whitespace-pre-wrap"
          >
            Question snapshot
          </div>
        </div>
      </div>
      <div
        class="relative"
      >
        <div
          class="ant-card ant-card-bordered ant-card-small css-dev-only-do-not-override-3uaqrl css-var-root"
          data-testid="flashcards-review-study-assistant"
        >
          <div
            class="ant-card-head"
          >
            <div
              class="ant-card-head-wrapper"
            >
              <div
                class="ant-card-head-title"
              >
                <div
                  class="flex items-center gap-2"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-sparkles size-4 text-primary"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M11.017 2.814a1 1 0 0 1 1.966 0l1.051 5.558a2 2 0 0 0 1.594 1.594l5.558 1.051a1 1 0 0 1 0 1.966l-5.558 1.051a2 2 0 0 0-1.594 1.594l-1.051 5.558a1 1 0 0 1-1.966 0l-1.051-5.558a2 2 0 0 0-1.594-1.594l-5.558-1.051a1 1 0 0 1 0-1.966l5.558-1.051a2 2 0 0 0 1.594-1.594z"
                    />
                    <path
                      d="M20 2v4"
                    />
                    <path
                      d="M22 4h-4"
                    />
                    <circle
                      cx="4"
                      cy="20"
                      r="2"
                    />
                  </svg>
                  <span>
                    Study assistant
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-card-body"
          >
            <div
              class="ant-space css-dev-only-do-not-override-3uaqrl ant-space-vertical w-full css-var-root"
              style="column-gap: 12px; row-gap: 12px;"
            >
              <div
                class="ant-space-item"
              >
                <div
                  class="flex flex-wrap gap-2"
                >
                  <button
                    class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span
                      class="ant-btn-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-lightbulb size-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
                        />
                        <path
                          d="M9 18h6"
                        />
                        <path
                          d="M10 22h4"
                        />
                      </svg>
                    </span>
                    <span>
                      Explain
                    </span>
                  </button>
                  <button
                    class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
                    type="button"
                  >
                    <span>
                      Mnemonic
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <div
                  class="rounded border border-border bg-surface p-3"
                >
                  <div
                    class="ant-space css-dev-only-do-not-override-3uaqrl ant-space-vertical w-full css-var-root"
                    style="column-gap: 8px; row-gap: 8px;"
                  >
                    <div
                      class="ant-space-item"
                    >
                      <span
                        class="ant-typography css-dev-only-do-not-override-3uaqrl css-var-root"
                      >
                        <strong>
                          Ask a follow-up
                        </strong>
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <textarea
                        aria-label="Ask the study assistant"
                        class="ant-input css-dev-only-do-not-override-3uaqrl ant-input-outlined css-var-root ant-input-css-var"
                        placeholder="Ask for clarification, examples, or a simpler explanation."
                        rows="3"
                      />
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <div
                        class="flex justify-end"
                      >
                        <button
                          class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
                          disabled=""
                          type="button"
                        >
                          <span
                            class="ant-btn-icon"
                          >
                            <svg
                              aria-hidden="true"
                              class="lucide lucide-message-square-text size-4"
                              fill="none"
                              height="24"
                              stroke="currentColor"
                              stroke-linecap="round"
                              stroke-linejoin="round"
                              stroke-width="2"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M22 17a2 2 0 0 1-2 2H6.828a2 2 0 0 0-1.414.586l-2.202 2.202A.71.71 0 0 1 2 21.286V5a2 2 0 0 1 2-2h16a2 2 0 0 1 2 2z"
                              />
                              <path
                                d="M7 11h10"
                              />
                              <path
                                d="M7 15h6"
                              />
                              <path
                                d="M7 7h8"
                              />
                            </svg>
                          </span>
                          <span>
                            Ask assistant
                          </span>
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="ant-space-item"
              >
                <div>
                  <h5
                    class="ant-typography !mb-2 css-dev-only-do-not-override-3uaqrl css-var-root"
                  >
                    Session
                  </h5>
                  <div
                    class="css-dev-only-do-not-override-3uaqrl css-var-root ant-empty ant-empty-normal"
                  >
                    <div
                      class="ant-empty-image"
                    >
                      <svg
                        height="41"
                        viewBox="0 0 64 41"
                        width="64"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <title>
                          No data
                        </title>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          transform="translate(0 1)"
                        >
                          <ellipse
                            cx="32"
                            cy="33"
                            fill="#f5f5f5"
                            rx="32"
                            ry="7"
                          />
                          <g
                            fill-rule="nonzero"
                            stroke="#d9d9d9"
                          >
                            <path
                              d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                            />
                            <path
                              d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                              fill="#fafafa"
                            />
                          </g>
                        </g>
                      </svg>
                    </div>
                    <div
                      class="ant-empty-description"
                    >
                      Use the assistant to explain or check this card without leaving review mode.
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-live="polite"
          class="absolute z-50 bottom-full mb-2 left-1/2 -translate-x-1/2 "
          role="tooltip"
        >
          <div
            class="relative max-w-xs rounded-lg bg-elevated text-text shadow-lg animate-in fade-in slide-in-from-bottom-2 duration-200"
          >
            <div
              aria-hidden="true"
              class="absolute w-0 h-0 border-[6px] top-full left-1/2 -translate-x-1/2 border-t-elevated border-l-transparent border-r-transparent border-b-transparent"
            />
            <div
              class="px-3 py-2"
            >
              <div
                class="flex items-start gap-2"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-lightbulb mt-0.5 size-4 flex-shrink-0 text-warn"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 14c.2-1 .7-1.7 1.5-2.5 1-.9 1.5-2.2 1.5-3.5A6 6 0 0 0 6 8c0 1 .2 2.2 1.5 3.5.7.7 1.3 1.5 1.5 2.5"
                  />
                  <path
                    d="M9 18h6"
                  />
                  <path
                    d="M10 22h4"
                  />
                </svg>
                <div
                  class="flex-1 min-w-0"
                >
                  <p
                    class="text-sm font-medium text-text"
                  >
                    Study assistant
                  </p>
                  <p
                    class="mt-0.5 text-xs text-text-muted"
                  >
                    Need help understanding a card? Ask the study assistant.
                  </p>
                </div>
                <button
                  aria-label="Dismiss"
                  class="flex-shrink-0 rounded p-0.5 hover:bg-surface2 focus:outline-none focus-visible:ring-2 focus-visible:ring-focus"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-x size-3.5 text-text-subtle hover:text-text"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 6 6 18"
                    />
                    <path
                      d="m6 6 12 12"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="mt-2 flex flex-col gap-3"
      >
        <div
          class="flex flex-col gap-2"
        >
          <button
            aria-label="Show answer (Space)"
            class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
            data-testid="flashcards-review-show-answer"
            type="button"
          >
            <span>
              Show Answer
            </span>
          </button>
          <div
            class="flex flex-wrap items-center gap-2"
            data-testid="flashcards-review-shortcut-chips-question"
          >
            <span
              class="ant-tag ant-tag-filled !m-0 css-dev-only-do-not-override-3uaqrl css-var-root"
            >
              Space Flip
            </span>
            <span
              class="ant-tag ant-tag-filled !m-0 css-dev-only-do-not-override-3uaqrl css-var-root"
            >
              E Edit
            </span>
            <button
              class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-link ant-btn-color-link ant-btn-variant-link ant-btn-sm !h-auto !px-0 text-xs"
              data-testid="flashcards-review-shortcut-hints-toggle"
              type="button"
            >
              <span>
                Compact hints
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ReviewTab create CTA visibility > matches baseline snapshot for caught-up completion state 1`] = `
<div
  class="mb-3 flex flex-wrap items-center gap-2 "
  data-testid="flashcards-review-topbar"
>
  <div
    class="ant-select ant-select-outlined min-w-64 max-w-full flex-1 css-var-root ant-select-css-var css-dev-only-do-not-override-3uaqrl ant-select-single ant-select-allow-clear ant-select-show-arrow"
    data-testid="flashcards-review-deck-select"
  >
    <div
      class="ant-select-content"
    >
      <div
        class="ant-select-content-value"
        style="visibility: visible;"
        title="11"
      >
        11
      </div>
      <input
        aria-autocomplete="list"
        aria-expanded="false"
        aria-haspopup="listbox"
        autocomplete="off"
        class="ant-select-input"
        id="test-id"
        readonly=""
        role="combobox"
        type="search"
        value=""
      />
    </div>
    <div
      class="ant-select-suffix"
    >
      <span
        aria-label="down"
        class="anticon anticon-down"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </div>
    <div
      class="ant-select-clear"
    >
      <span
        aria-label="close-circle"
        class="anticon anticon-close-circle"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="close-circle"
          fill="currentColor"
          fill-rule="evenodd"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M512 64c247.4 0 448 200.6 448 448S759.4 960 512 960 64 759.4 64 512 264.6 64 512 64zm127.98 274.82h-.04l-.08.06L512 466.75 384.14 338.88c-.04-.05-.06-.06-.08-.06a.12.12 0 00-.07 0c-.03 0-.05.01-.09.05l-45.02 45.02a.2.2 0 00-.05.09.12.12 0 000 .07v.02a.27.27 0 00.06.06L466.75 512 338.88 639.86c-.05.04-.06.06-.06.08a.12.12 0 000 .07c0 .03.01.05.05.09l45.02 45.02a.2.2 0 00.09.05.12.12 0 00.07 0c.02 0 .04-.01.08-.05L512 557.25l127.86 127.87c.04.04.06.05.08.05a.12.12 0 00.07 0c.03 0 .05-.01.09-.05l45.02-45.02a.2.2 0 00.05-.09.12.12 0 000-.07v-.02a.27.27 0 00-.05-.06L557.25 512l127.87-127.86c.04-.04.05-.06.05-.08a.12.12 0 000-.07c0-.03-.01-.05-.05-.09l-45.02-45.02a.2.2 0 00-.09-.05.12.12 0 00-.07 0z"
          />
        </svg>
      </span>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-dev-only-do-not-override-3uaqrl css-var-root"
    data-testid="flashcards-review-mode-toggle"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Due only"
        >
          Due only
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Cram"
        >
          Cram
        </div>
      </label>
    </div>
  </div>
  <div
    aria-label="segmented control"
    aria-orientation="horizontal"
    class="ant-segmented css-dev-only-do-not-override-3uaqrl css-var-root"
    data-testid="flashcards-review-prompt-side-toggle"
    role="radiogroup"
    tabindex="0"
  >
    <div
      class="ant-segmented-group"
    >
      <label
        class="ant-segmented-item ant-segmented-item-selected"
      >
        <input
          checked=""
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Front first"
        >
          Front first
        </div>
      </label>
      <label
        class="ant-segmented-item"
      >
        <input
          class="ant-segmented-item-input"
          name="test-id"
          type="radio"
        />
        <div
          class="ant-segmented-item-label"
          title="Back first"
        >
          Back first
        </div>
      </label>
    </div>
  </div>
  <button
    class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid min-h-11"
    data-testid="flashcards-review-create-cta"
    type="button"
  >
    <span>
      Create card
    </span>
  </button>
</div>
`;

exports[`ReviewTab create CTA visibility > matches baseline snapshot for caught-up completion state 2`] = `
<div
  class="ant-card ant-card-bordered css-dev-only-do-not-override-3uaqrl css-var-root"
  data-testid="flashcards-review-empty-card"
>
  <div
    class="ant-card-body"
  >
    <div
      class="css-dev-only-do-not-override-3uaqrl css-var-root ant-empty"
    >
      <div
        class="ant-empty-image"
      >
        <svg
          height="152"
          viewBox="0 0 184 152"
          width="184"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            No data
          </title>
          <g
            fill="none"
            fill-rule="evenodd"
          >
            <g
              transform="translate(24 31.67)"
            >
              <ellipse
                cx="67.797"
                cy="106.89"
                fill="#F5F5F7"
                fill-opacity=".8"
                rx="67.797"
                ry="12.668"
              />
              <path
                d="M122.034 69.674L98.109 40.229c-1.148-1.386-2.826-2.225-4.593-2.225h-51.44c-1.766 0-3.444.839-4.592 2.225L13.56 69.674v15.383h108.475V69.674z"
                fill="#AEB8C2"
              />
              <path
                d="M101.537 86.214L80.63 61.102c-1.001-1.207-2.507-1.867-4.048-1.867H31.724c-1.54 0-3.047.66-4.048 1.867L6.769 86.214v13.792h94.768V86.214z"
                fill="url(#linearGradient-1)"
                transform="translate(13.56)"
              />
              <path
                d="M33.83 0h67.933a4 4 0 0 1 4 4v93.344a4 4 0 0 1-4 4H33.83a4 4 0 0 1-4-4V4a4 4 0 0 1 4-4z"
                fill="#F5F5F7"
              />
              <path
                d="M42.678 9.953h50.237a2 2 0 0 1 2 2V36.91a2 2 0 0 1-2 2H42.678a2 2 0 0 1-2-2V11.953a2 2 0 0 1 2-2zM42.94 49.767h49.713a2.262 2.262 0 1 1 0 4.524H42.94a2.262 2.262 0 0 1 0-4.524zM42.94 61.53h49.713a2.262 2.262 0 1 1 0 4.525H42.94a2.262 2.262 0 0 1 0-4.525zM121.813 105.032c-.775 3.071-3.497 5.36-6.735 5.36H20.515c-3.238 0-5.96-2.29-6.734-5.36a7.309 7.309 0 0 1-.222-1.79V69.675h26.318c2.907 0 5.25 2.448 5.25 5.42v.04c0 2.971 2.37 5.37 5.277 5.37h34.785c2.907 0 5.277-2.421 5.277-5.393V75.1c0-2.972 2.343-5.426 5.25-5.426h26.318v33.569c0 .617-.077 1.216-.221 1.789z"
                fill="#DCE0E6"
              />
            </g>
            <path
              d="M149.121 33.292l-6.83 2.65a1 1 0 0 1-1.317-1.23l1.937-6.207c-2.589-2.944-4.109-6.534-4.109-10.408C138.802 8.102 148.92 0 161.402 0 173.881 0 184 8.102 184 18.097c0 9.995-10.118 18.097-22.599 18.097-4.528 0-8.744-1.066-12.28-2.902z"
              fill="#DCE0E6"
            />
            <g
              fill="#FFF"
              transform="translate(149.65 15.383)"
            >
              <ellipse
                cx="20.654"
                cy="3.167"
                rx="2.849"
                ry="2.815"
              />
              <path
                d="M5.698 5.63H0L2.898.704zM9.259.704h4.985V5.63H9.259z"
              />
            </g>
          </g>
        </svg>
      </div>
      <div
        class="ant-empty-description"
      >
        You're all caught up!
      </div>
      <div
        class="ant-empty-footer"
      >
        <div
          class="ant-space css-dev-only-do-not-override-3uaqrl ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
        >
          <div
            class="ant-space-item"
          >
            <span
              class="ant-typography ant-typography-secondary css-dev-only-do-not-override-3uaqrl css-var-root"
            >
              No cards are due for review. Great job!
            </span>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn css-dev-only-do-not-override-3uaqrl css-var-root ant-btn-link ant-btn-color-link ant-btn-variant-link"
              type="button"
            >
              <span>
                Create card
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
